# cpp_learnings

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  STRUCTURE.md  main.cpp
.cursor/rules/: code-syntax-c++.mdc  final-newline.mdc  git-operations-control.mdc  no-extra-readmes.mdc  no-proprietary-codebase-discussion.mdc  profile-intermediate.mdc  profile-junior.mdc  profile-principal.mdc  profile-senior.mdc  profile-staff.mdc  socratic-software-engineering.mdc
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
cmake/: AddLearningTest.cmake
common/: CMakeLists.txt
common/src/: instrumentation.h  move_instrumentation.cpp  move_instrumentation.h
docs/: BUILDING.md  LEARNING_PATH.md  TEACHING_METHOD.md
examples/: CMakeLists.txt  test_try_it_out.cpp
learning_concurrency/: CMakeLists.txt
learning_concurrency/tests/: test_lock_free_basics.cpp  test_producer_consumer_advanced.cpp  test_reader_writer_locks.cpp  test_thread_safe_singleton.cpp
learning_deadlocks/: CMakeLists.txt  SUMMARY.txt
learning_deadlocks/tests/: test_circular_reference_deadlocks.cpp  test_condition_variable_deadlocks.cpp  test_mutex_ordering_deadlocks.cpp  test_ownership_transfer_deadlocks.cpp
learning_debugging/: CMakeLists.txt
learning_debugging/tests/: test_benchmark.cpp  test_googlemock.cpp  test_sanitizers.cpp
learning_design_patterns/: CMakeLists.txt
learning_design_patterns/tests/: test_modern_cpp_patterns.cpp
learning_error_handling/: CMakeLists.txt
learning_error_handling/tests/: test_error_codes_vs_exceptions.cpp  test_exception_safety.cpp  test_noexcept.cpp  test_optional_result_types.cpp
learning_memory/: CMakeLists.txt
learning_memory/tests/: test_alignment_cache_friendly.cpp  test_placement_new.cpp
learning_modern_cpp/: CMakeLists.txt
learning_modern_cpp/tests/: test_auto_type_deduction.cpp  test_delegating_constructors.cpp  test_if_constexpr.cpp  test_lambdas.cpp  test_structured_bindings.cpp
learning_move_semantics/: CMakeLists.txt  README.md
learning_move_semantics/src/: instrumentation.cpp  instrumentation.h
learning_move_semantics/tests/: test_move_assignment.cpp  test_move_only_types.cpp  test_perfect_forwarding.cpp  test_rvalue_references.cpp  test_std_move.cpp
learning_performance/: CMakeLists.txt
learning_performance/tests/: test_benchmarking.cpp  test_cache_friendly.cpp  test_constexpr.cpp  test_profiling.cpp  test_small_object_optimization.cpp
learning_raii/: CMakeLists.txt
learning_raii/tests/: test_file_socket_management.cpp  test_scope_guards.cpp
learning_shared_ptr/: CMakeLists.txt  README.md  SETUP_ASIO.md  structure.txt
learning_shared_ptr/compile_fail_tests/: README.md  deleted_copy_constructor.cpp  shared_from_raw.cpp  shared_ptr_to_stack.cpp  weak_ptr_direct_use.cpp
learning_shared_ptr/src/: instrumentation.h
learning_shared_ptr/tests/: test_aliasing_weak.cpp  test_allocation_patterns.cpp  test_asio_basics.cpp  test_collection_patterns.cpp  test_deallocation_lifetime.cpp  test_exercises_fill_in.cpp  test_interop_patterns.cpp  test_multi_threaded_patterns.cpp  test_ownership_patterns.cpp  test_reference_counting.cpp  test_scope_lifetime_patterns.cpp  test_self_reference_patterns.cpp  test_structural_patterns.cpp
learning_stl/: CMakeLists.txt
learning_stl/tests/: test_algorithms.cpp  test_container_internals.cpp  test_iterators.cpp
learning_templates/: CMakeLists.txt
learning_templates/tests/: test_practical_metaprogramming.cpp  test_sfinae.cpp  test_type_traits.cpp  test_variadic_templates.cpp
profile_showcase/: CMakeLists.txt
profile_showcase/tests/: profile_showcase.cpp
test_concurrency/: CMakeLists.txt
test_concurrency/tests/: test_thread_pools.cpp
test_deadlocks/: SUMMARY.txt  test_circular_reference_deadlocks.cpp  test_condition_variable_deadlocks.cpp  test_ownership_transfer_deadlocks.cpp
test_debugging/tests/: test_static_analysis.cpp
test_design_patterns/tests/: test_behavioral_patterns.cpp  test_creational_patterns.cpp  test_structural_patterns.cpp
test_error_handling/: CMakeLists.txt
test_error_handling/tests/: test_raii_exception_safety.cpp
test_memory/tests/: test_custom_allocators.cpp  test_pool_allocators.cpp
test_modern_cpp/: CMakeLists.txt
test_modern_cpp/tests/: test_optional_variant_any.cpp  test_string_view.cpp  test_uniform_initialization.cpp
test_move_semantics/: CMakeLists.txt  README.md
test_move_semantics/tests/: test_move_assignment.cpp  test_move_only_types.cpp  test_perfect_forwarding.cpp  test_rvalue_references.cpp  test_std_move.cpp
test_performance/: CMakeLists.txt
test_performance/tests/: test_copy_elision_rvo.cpp
test_raii/: CMakeLists.txt
test_raii/tests/: test_custom_resource_managers.cpp  test_smart_pointers_from_scratch.cpp
test_shared_ptr/: C++11_COMPATIBILITY.md  CHECKLIST.md  CMakeLists.txt  LEARNINGS.md  LEARNING_SUMMARY.md  MULTI_THREADED_SUMMARY.md  MULTI_THREADED_TESTS.md  README.md  SETUP_ASIO.md  UPDATE_STATUS.md
test_shared_ptr/compile_fail_tests/: unique_ptr_copy.cpp
test_shared_ptr/src/: instrumentation.cpp
test_shared_ptr/tests/: test_aliasing_weak.cpp  test_anti_patterns.cpp  test_conditional_lifetime.cpp  test_deallocation_lifetime.cpp  test_exercises_fill_in.cpp  test_polymorphism_patterns.cpp  test_reference_counting.cpp  test_scope_lifetime_patterns.cpp  test_singleton_registry.cpp  test_smart_pointer_contrast.cpp  test_structural_patterns.cpp
test_stl/tests/: test_comparators_hash_functions.cpp  test_iterator_invalidation.cpp
test_templates/tests/: test_function_class_templates.cpp  test_template_specialization.cpp
